--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">
+    <div class="detail">
+      <img class="detail__img" src="./eisenhower-matrix.jpg">
+      <a class="detail__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <div class="main">
+      <p id="add-task" class="add-task">
+        <label for="new-task" class="add-task__label">Add Item</label>
+        <div class="add-task__wrapper">
+          <input id="new-task"class="add-task__text" type="text">
+          <button class="add-task__button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="title">Todo</h3>
+      <ul id="incomplete-task">
+        <li class="item">
+          <input type="checkbox" class="item__checkbox">
+          <label class="item__label">Pay Bills</label>
+          <input type="text" class="item__text">
+          <button class="item__button--edit item__button">Edit</button>
+          <button class="item__button--delete item__button">
+            <img src="./remove.svg" class="item__img">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="item item--edit-task">
+          <input type="checkbox" class="item__checkbox">
+          <label class="item__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="item__text">
+          <button class="item__button--edit item__button">Save</button>
+          <button class="item__button--delete item__button">
+            <img src="./remove.svg" class="item__img">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="title">Completed</h3>
+      <ul id="completed-task">
+        <li class="item">
+          <input type="checkbox" class="item__checkbox" checked>
+          <label class="item__label item__label--completed">See the Doctor</label>
+          <input type="text" class="item__text">
+          <button class="item__button--edit item__button">Edit</button>
+          <button class="item__button--delete item__button">
+            <img src="./remove.svg" class="item__img">
           </button>
         </li>
       </ul>
