--- a/index.html
+++ b/index.html
@@ -6,52 +6,58 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="detail">
+    <header class="detail">
       <img class="detail__img" src="./eisenhower-matrix.jpg">
       <a class="detail__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-task" class="add-task">
-        <label for="new-task" class="add-task__label">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="add-task" class="add-task">
+        <label for="new-task" class="add-task__label">
+          <h3 class="title add-task__title">Add Item</h3>
+        </label>
         <div class="add-task__wrapper">
           <input id="new-task"class="add-task__text" type="text">
           <button class="add-task__button">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul id="incomplete-task">
-        <li class="item">
-          <input type="checkbox" class="item__checkbox">
-          <label class="item__label">Pay Bills</label>
-          <input type="text" class="item__text">
-          <button class="item__button--edit item__button">Edit</button>
-          <button class="item__button--delete item__button">
-            <img src="./remove.svg" class="item__img">
-          </button>
-        </li>
-        <li class="item item--edit-task">
-          <input type="checkbox" class="item__checkbox">
-          <label class="item__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="item__text">
-          <button class="item__button--edit item__button">Save</button>
-          <button class="item__button--delete item__button">
-            <img src="./remove.svg" class="item__img">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul id="completed-task">
-        <li class="item">
-          <input type="checkbox" class="item__checkbox" checked>
-          <label class="item__label item__label--completed">See the Doctor</label>
-          <input type="text" class="item__text">
-          <button class="item__button--edit item__button">Edit</button>
-          <button class="item__button--delete item__button">
-            <img src="./remove.svg" class="item__img">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="title">Todo</h3>
+        <ul id="incomplete-task">
+          <li class="item">
+            <input type="checkbox" class="item__checkbox">
+            <label class="item__label">Pay Bills</label>
+            <input type="text" class="item__text">
+            <button class="item__button--edit item__button">Edit</button>
+            <button class="item__button--delete item__button">
+              <img src="./remove.svg" class="item__img">
+            </button>
+          </li>
+          <li class="item item--edit-task">
+            <input type="checkbox" class="item__checkbox">
+            <label class="item__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="item__text">
+            <button class="item__button--edit item__button">Save</button>
+            <button class="item__button--delete item__button">
+              <img src="./remove.svg" class="item__img">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="title">Completed</h3>
+        <ul id="completed-task">
+          <li class="item">
+            <input type="checkbox" class="item__checkbox" checked>
+            <label class="item__label item__label--completed">See the Doctor</label>
+            <input type="text" class="item__text">
+            <button class="item__button--edit item__button">Edit</button>
+            <button class="item__button--delete item__button">
+              <img src="./remove.svg" class="item__img">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
