--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="detail">
-      <img class="detail__img" src="./eisenhower-matrix.jpg">
+      <img class="detail__img" src="./eisenhower-matrix.jpg" alt="Image of the Eisenhower Matrix how to make description on what's urgent & important">
       <a class="detail__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -29,7 +29,7 @@
             <input type="text" class="item__text">
             <button class="item__button--edit item__button">Edit</button>
             <button class="item__button--delete item__button">
-              <img src="./remove.svg" class="item__img">
+              <img src="./remove.svg" class="item__img" alt="">
             </button>
           </li>
           <li class="item item--edit-task">
@@ -38,7 +38,7 @@
             <input type="text" value="Go Shopping" class="item__text">
             <button class="item__button--edit item__button">Save</button>
             <button class="item__button--delete item__button">
-              <img src="./remove.svg" class="item__img">
+              <img src="./remove.svg" class="item__img" alt="">
             </button>
           </li>
         </ul>
@@ -52,7 +52,7 @@
             <input type="text" class="item__text">
             <button class="item__button--edit item__button">Edit</button>
             <button class="item__button--delete item__button">
-              <img src="./remove.svg" class="item__img">
+              <img src="./remove.svg" class="item__img" alt="">
             </button>
           </li>
         </ul>
